--- a/workshop/notebooks/cztile_0_0_2.ipynb
+++ b/workshop/notebooks/cztile_0_0_2.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "## Disclaimer\n",
     "\n",
-    "This notebook is free to use for everybody. The author or Carl Zeiss Microscopy GmbH's undertakes no warranty concerning the use of those scripts, notebooks image analysis settings and ZEN experiments. Use them on your own risk.\n",
+    "This content of this repository is free to use for everybody. Carl Zeiss Microscopy GmbH's ZEN software undertakes no warranty concerning the use of those scripts, image analysis settings and ZEN experiments. Use them on your own risk.\n",
     "\n",
     "**By using any of those examples you agree to this disclaimer.**"
    ]
