corrected links inside notebooks

--- a/workshop/notebooks/Using_pylibCZIrw_3_2_0.ipynb
+++ b/workshop/notebooks/Using_pylibCZIrw_3_2_0.ipynb
@@ -106,7 +106,7 @@
     "INPUT_FOLDER = 'data/inputs/'\n",
     "\n",
     "# Path to the data on GitHub\n",
-    "GITHUB_DATA_PATH = 'https://raw.githubusercontent.com/zeiss-microscopy/OAD/master/jupyter_notebooks/pylibCZIrw/data.zip'"
+    "GITHUB_DATA_PATH = 'https://raw.githubusercontent.com/zeissmicroscopy/cytodata_2022_workshop/main/workshop/notebooks/data.zip'"
    ]
   },
   {
@@ -189,9 +189,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "# define the filename\n",
+    "# define the filenames for the CZI images to be read\n",
     "czifile_scenes = os.path.join(INPUT_FOLDER, r\"w96_A1+A2.czi\")\n",
     "czifile_5dstack = os.path.join(INPUT_FOLDER, r\"T=3_Z=5_CH=2_X=240_Y=170.czi\")\n",
     "\n",
@@ -676,16 +674,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b257866d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[0].shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "bbc578c6",
    "metadata": {},
@@ -1089,6 +1077,7 @@
     "with pyczi.open_czi(czifile_orig) as czidoc_r:\n",
     "    # get the size of the bounding rectange for the scence\n",
     "    tiles = tiler.tile_rectangle(czidoc_r.scenes_bounding_rectangle[0])\n",
+    "    numtiles = len(tiles)\n",
     "\n",
     "# show the created tile locations\n",
     "for tile in tiles:\n",
