--- a/workshop/notebooks/cztile_0_0_2.ipynb
+++ b/workshop/notebooks/cztile_0_0_2.ipynb
@@ -232,12 +232,10 @@
    "source": [
     "fig1, ax1 = plt.subplots(1, 4, figsize=(16, 8))\n",
     "fig2, ax2 = plt.subplots(1, 4, figsize=(16, 8))\n",
-    "a = 0\n",
+    "a = 0 # counter for plots\n",
     "\n",
     "# iterate over all tiles and apply the processing\n",
     "for tile in tqdm(tiles):\n",
-    "    \n",
-    "    #print(tile.roi.x, tile.roi.y, tile.roi.w, tile.roi.h)\n",
     "\n",
     "    # get a single frame based on the tile coordinates and size\n",
     "    tile2d = img2d[tile.roi.y:tile.roi.y + tile.roi.h, tile.roi.x:tile.roi.x + tile.roi.w]\n",
@@ -253,6 +251,7 @@
     "    # place frame inside the new image\n",
     "    processed_img2d[tile.roi.y:tile.roi.y + tile.roi.h, tile.roi.x:tile.roi.x + tile.roi.w] = tile2d_processed\n",
     "    \n",
+    "    # increase the plot counter\n",
     "    a += 1"
    ]
   },
@@ -297,7 +296,7 @@
     "ax4.imshow(processed_img2d, interpolation=\"nearest\", cmap=\"gray\",vmin=100, vmax=2000)\n",
     "ax4.set_title('Processed - TileWise')\n",
     "\n",
-    "\n",
+    "# modify properties\n",
     "edge_color_opacity = 1.0\n",
     "face_color_opacity = 0.7\n",
     "\n",
